--- a/styles.css
+++ b/styles.css
@@ -1,62 +1,127 @@
-svg {
-  cursor: pointer;
-  position: fixed;
-  top: 0;
-  right: 0;
-  width: 80px;
-  z-index: 10;
-}
-
-svg path {
-  stroke-width: 10;
-  stroke-linecap: round;
-  stroke: black;
-  fill: none;
-  transition: all 0.5s ease-in-out;
-}
-
-/* In menu form */
-
-.top_bar,
-.bottom_bar {
-  stroke-dasharray: 240px 910px;
-}
-
-.middle_bar {
-  stroke-dasharray: 240px 240px;
-}
-
-/* In cross form */
-
-.open .top_bar,
-.open .bottom_bar {
-  stroke-dashoffset: -650px;
-}
-
-.open .middle_bar {
-  stroke-dasharray: 0px 220px;
-  stroke-dashoffset: -120px;
-}
-header {
+/* header {
   display: flex;
   justify-content: flex-end;
+} */
+:root {
+  --primary-font: "DM Serif Display", serif;
+  --main-font: "Lora", serif;
+  --main-color: rgb(20, 33, 61);
+  --light-color: #e5e5e5;
+  --accent-color: rgb(117, 161, 162);
+}
+body {
+  font-family: var(--main-font);
+  background-color: var(--light-color);
+}
+header {
+  position: fixed;
+  background-color: rgba(229, 229, 229, 0.3);
+  width: 100%;
+  top: 0;
+  right: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  z-index: 10;
+}
+.logo {
+  padding: 15px;
+  text-decoration: none;
+  background-color: var(--main-color);
+  font-family: var(--main-font);
+  color: white;
+  font-size: 20px;
 }
 .navigation {
-  position: fixed;
-  top: 0;
+  display: flex;
+  padding-left: 15px;
+}
+.nav__link {
+  text-decoration: none;
+  color: var(--main-color);
+  margin: 0 15px;
+  position: relative;
+  font-size: 18px;
+}
+
+.nav__link:before {
+  content: "";
+  display: block;
+  position: absolute;
   left: 0;
+  width: 0;
+  height: 2px;
+  background-color: var(--accent-color);
+  transition: width 0.3s ease-out;
+}
+.nav__link:hover:before,
+.nav__link:focus:before {
   width: 100%;
-  height: 100%;
-  padding: 15px;
-  background: #ffefba;
-  transform: translateY(-100%);
-  transition: transform 0.5s;
 }
-
-.navigation.active {
-  transform: translateX(0);
+svg {
+  display: none;
 }
+@media screen and (max-width: 700px) {
+  svg {
+    display: block;
+    cursor: pointer;
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 80px;
+    z-index: 10;
+  }
 
-.navigation li {
-  list-style-type: none;
+  svg path {
+    stroke-width: 25;
+    stroke-linecap: round;
+    stroke: black;
+    fill: none;
+    transition: all 0.5s ease-in-out;
+  }
+  .top_bar,
+  .bottom_bar {
+    stroke-dasharray: 240px 910px;
+  }
+
+  .middle_bar {
+    stroke-dasharray: 240px 240px;
+  }
+
+  /* In cross form */
+  .open path {
+    stroke: white;
+  }
+  .open .top_bar,
+  .open .bottom_bar {
+    stroke-dashoffset: -650px;
+  }
+
+  .open .middle_bar {
+    stroke-dasharray: 0px 220px;
+    stroke-dashoffset: -120px;
+  }
+  .navigation {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: auto;
+    padding: 50px;
+    background: var(--main-color);
+    transform: translateY(-100%);
+    transition: transform 0.5s;
+    flex-direction: column;
+  }
+  .nav__link {
+    color: white;
+    margin: 15px 0;
+  }
+  .nav__link:before {
+    display: none;
+  }
+
+  .navigation.active {
+    transform: translateY(0);
+  }
 }
