--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,9 @@
 body {
   font-family: var(--main-font);
   background-color: var(--light-color);
+  max-width: 1320px;
+  margin: 0 auto;
+  padding: 50px;
 }
 header {
   position: fixed;
@@ -58,8 +61,24 @@ header {
 .nav__link:focus:before {
   width: 100%;
 }
-svg {
+.menu-icon {
   display: none;
+}
+.social svg {
+  width: 35px;
+  height: auto;
+  opacity: 0.6;
+  margin: 5px 0;
+}
+.social svg:hover {
+  opacity: 1;
+}
+.sidebar {
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  top: 65px;
+  right: 40px;
 }
 @media screen and (max-width: 700px) {
   svg {
