--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body {
   background-color: var(--light-color);
 }
 main {
-  padding: 40px 40px 0 40px;
+  padding: 100px 40px 0 40px;
   max-width: 1320px;
   margin: 0 auto;
 }
@@ -116,6 +116,7 @@ h1::before {
 }
 .about-button {
   display: inline-block;
+  margin-top: 20px;
   text-decoration: none;
   padding: 1.3em 3em;
   font-size: 12px;
@@ -138,7 +139,7 @@ h1::before {
 }
 .home-description {
   border-bottom: 1px solid rgba(117, 161, 162, 0.5);
-  padding: 100px 0 40px;
+  padding-bottom: 50px;
 }
 .projects-container {
   padding: 40px 0;
@@ -206,8 +207,8 @@ footer {
 }
 
 @media screen and (max-width: 992px) {
-  .home-description {
-    padding-top: 50px;
+  main {
+    padding-top: 100px;
   }
   .fixed {
     overflow: hidden;
@@ -363,4 +364,36 @@ footer {
   .footer-links a {
     font-size: 16px;
   }
+}
+
+/* about page */
+.profile-picture {
+  max-width: 400px;
+  display: block;
+  margin: 0 auto;
+}
+.picture-bg-light {
+  background: rgb(117, 161, 162);
+  background: radial-gradient(
+    circle,
+    rgba(117, 161, 162, 0.8772759103641457) 0%,
+    rgba(229, 229, 229, 0.6671918767507004) 61%
+  );
+  background-position: -50px;
+}
+.picture-bg {
+  background: rgb(9, 13, 121);
+  background: radial-gradient(
+    circle,
+    rgba(9, 13, 121, 0.9529914529914529) 0%,
+    rgba(229, 229, 229, 0.6671918767507004) 61%
+  );
+  background-position: 50px;
+}
+.about-me-description {
+  display: block;
+  margin: auto;
+}
+.about__name::before {
+  width: 78%;
 }
