--- a/styles.css
+++ b/styles.css
@@ -199,6 +199,7 @@ footer {
   justify-content: space-between;
   max-width: 1320px;
   margin: 0 auto;
+  padding: 5px;
 }
 .footer-content div:nth-child(1) {
   font-size: 25px;
@@ -208,6 +209,9 @@ footer {
   font-size: 18px;
   text-decoration: none;
   color: var(--light-color);
+}
+footer a {
+  color: white;
 }
 /* about page */
 .profile-picture {
@@ -401,6 +405,16 @@ footer {
   }
   .h5__projects {
     font-size: 25px;
+  }
+  footer {
+    position: relative;
+  }
+  .footer p {
+    position: absolute;
+    bottom: -10px;
+    right: 50%;
+    transform: translateX(50%);
+    font-size: 15px;
   }
 }
 
